# homelogic

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README.md  adr.h  bool.h  bus.c  bus.h  config.h.in  config.in  configure  configure.ac  defaults.mk  dig_ac230.brd  dig_ac230.sch  eeprom.c  eeprom.h  hardware.h  i2c.c  i2c.h  main.c  main.h  memory.h  mm16.brd  mm16.sch  ms1616.brd  ms1616.sch  out8.brd  out8.sch  prog.c  prog.h  rtc.c  rtc.h  str.c  str.h
common/: counter.h  opcodes.def  pattern.h  timer.h
fhem/: 10_HlCon.pm  25_Homelogic.pm
firmware/: Makefile  Makefile.in  Makefile.template  README.md  adc.c  adc.h  bus.c  bus.h  config.in  config.sh  eeprom.c  eeprom.h  error.c  error.h  hardware.h  i2c.c  i2c.h  led.h  main.c  main.h  memory.h  prog.c  prog.h  rtc.c  rtc.h  usb.c  usb.h  usb.mk
firmware/hardware/: at90usb1287.c  at90usb1287.m4  atmega1284.h  atmega1284p.c  atmega1284p.m4  atmega32.c  atmega32.h  atmega32.m4  dig_ac230.c  dig_ac230.h  dig_ac230.m4  footer.m4  header.m4  prototype.c  prototype.h  prototype.m4  usb_cpu.c  usb_cpu.m4
firmware/scripts/: Menuconfig
firmware/scripts/lxdialog/: Makefile
hardware/: dc_adapter.brd  dc_adapter.sch  dig_ac230.brd  dig_ac230.h  dig_ac230.sch  dig_usb.brd  dig_usb.sch  dm_in.brd  dm_in.sch  dm_out.brd  dm_out.sch  dmi.brd  dmi.sch  dmo.brd  dmo.sch  mm16.sch  out8.brd  prototype.h
libhl/: Makefile  Makefile.am  Makefile.in  compiler.c  compiler.h  config.in  connector.c  error.c  hlc.c  hlc.h  hll.c  hll.h  hlterm.c  hlterm.h  homelogic.h  loader.c  loader.h  preprocessor.c  private.h  terminal.c  terminal.h  virtualbus.c
test/: Makefile  Makefile.am  Makefile.in  config.in  hlc.c  hlload.c  hlm.c  hlterm.c  pana.c
